--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write .",
-    "eslint":"npx eslint '.'"
+    "eslint": "npx eslint '.'",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,7 @@
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
+    "husky": "^8.0.1",
     "prettier": "2.7.1"
   }
 }
