--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/node,macos,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,react
+# Created by https://www.toptal.com/developers/gitignore/api/macos,react,visualstudiocode,node
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,react,visualstudiocode,node
 
 ### macOS ###
 # General
@@ -188,27 +188,29 @@ psd
 thumb
 sketch
 
-# End of https://www.toptal.com/developers/gitignore/api/node,macos,react
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Local History for Visual Studio Code
+.history/
 
-# testing
-/coverage
+# Built Visual Studio Code Extensions
+*.vsix
 
-# production
-/build
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Support for Project snippet scope
+.vscode/*.code-snippets
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignore code-workspaces
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/macos,react,visualstudiocode,node
