--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write .",
-    "eslint": "npx eslint '.'",
+    "eslint": "npx eslint .",
     "prepare": "husky install"
   },
   "eslintConfig": {
