--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "faker-ts": "^0.0.2",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "ts-faker": "^0.0.5",
     "typescript": "^4.7.3",
+    "util": "^0.12.4",
+    "utils": "^0.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,11 +50,19 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "husky": "^8.0.1",
+    "json-server": "^0.17.0",
     "prettier": "2.7.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
