--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "browserify-fs": "^1.0.0",
     "faker-ts": "^0.0.2",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write .",
-    "eslint": "npx eslint '.'",
+    "eslint": "npx eslint ./src/*.tsx",
     "prepare": "husky install"
   },
   "eslintConfig": {
