--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "browserify-fs": "^1.0.0",
+    "faker": "^5.5.3",
     "faker-ts": "^0.0.2",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
@@ -30,7 +31,8 @@
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write .",
     "eslint": "npx eslint ./src/*.tsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "data":"node src/faker.js"
   },
   "eslintConfig": {
     "extends": [
