--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^4.0.0",
-    "node": "^18.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -65,7 +64,8 @@
     "eslint-plugin-react": "^7.30.0",
     "husky": "^8.0.1",
     "json-server": "^0.17.0",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react-router-dom": "^6.3.0"
   },
   "browser": {
     "fs": false,
