--- a/package.json
+++ b/package.json
@@ -1,75 +1,82 @@
 {
-  "name": "event_sport",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "axios": "^0.27.2",
-    "browserify-fs": "^1.0.0",
-    "faker": "^5.5.3",
-    "faker-ts": "^0.0.2",
-    "fs": "^0.0.1-security",
-    "lodash": "^4.17.21",
-    "mdb-react-ui-kit": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "ts-faker": "^0.0.5",
-    "typescript": "^4.7.3",
-    "util": "^0.12.4",
-    "utils": "^0.3.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prettier": "npx prettier --write .",
-    "eslint": "npx eslint ./src/*.tsx",
-    "prepare": "husky install",
-    "data_server": "node src/faker.js && json-server --watch data/db.json --port 5000",
-    "data": "node src/faker.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "event_sport",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.11.41",
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.5",
+        "axios": "^0.27.2",
+        "browserify-fs": "^1.0.0",
+        "faker": "^5.5.3",
+        "faker-ts": "^0.0.2",
+        "fs": "^0.0.1-security",
+        "lodash": "^4.17.21",
+        "mdb-react-ui-kit": "^4.0.0",
+        "react": "^18.2.0",
+        "react-content-loader": "^6.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "5.0.1",
+        "ts-faker": "^0.0.5",
+        "typescript": "^4.7.3",
+        "util": "^0.12.4",
+        "utils": "^0.3.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prettier": "npx prettier --write .",
+        "eslint": "npx eslint ./src/*.tsx",
+        "prepare": "husky install",
+        "data_server": "node src/faker.js && json-server --watch data/db.json --port 5000",
+        "data": "node src/faker.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "eslintIgnore": [
+        "./build/*",
+        "./public/*"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/faker": "^6.6.9",
-    "@types/lodash": "^4.14.182",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^8.17.0",
-    "eslint-plugin-react": "^7.30.0",
-    "husky": "^8.0.1",
-    "json-server": "^0.17.0",
-    "prettier": "2.7.1",
-    "react-router-dom": "^6.3.0"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
-  }
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/faker": "^6.6.9",
+        "@types/lodash": "^4.14.182",
+        "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/parser": "^5.28.0",
+        "eslint": "^8.17.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.0",
+        "husky": "^8.0.1",
+        "json-server": "^0.17.0",
+        "prettier": "2.7.1"
+    },
+    "browser": {
+        "fs": false,
+        "path": false,
+        "os": false
+    }
 }
