--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write .",
-    "eslint": "npx eslint ./src/*.tsx",
+    "eslint": "npx eslint ./src/*/*.tsx",
     "prepare": "husky install",
     "data_server": "node src/faker.js && json-server --watch data/db.json --port 5000",
     "data": "node src/faker.js"
